[package]
name = "ulmus"
version = "0.4.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Andrej Kolčin <self@kaathewise.net>"]
description = "An Elm architecture TUI framework"
keywords = ["tui", "terminal", "elm", "widgets"]
categories = ["command-line-interface"]
repository = "https://codeberg.org/kaathewise/ulmus"

[dependencies]
crossterm = "0.28.1"

[lints.clippy]
panic = "forbid"
expect_used = "forbid"
unwrap_used = "forbid"
